fix store controller documentation(can input json)
